@startuml persistency_to_facade_example

skinparam linetype ortho


package "Facade-layer" as FacadeLayer {

    class EmployeeFacade {
    }

    class ProjectFacade {
    }


}


package "Persistency-layer" as PersistencyLayer {
    class ProjectRepository << (S,#FF7700) Singleton >>{
        --
        {static} getInstance() : ProjectRepository
        + findByProjectNumber(projectNumber) : Project
        + create(title, date) : Project
        + findWorktimeRegistrationById(int id) : WorktimeRegistration
        + generateWorktimeRegistrationId() : int
        + getListOfEmployees(String projectNumber) : List
    }

    class EmployeeRepository << (S,#FF7700) Singleton >>{
        --
        {static} getInstance() : EmployeeRepository
        + findByInitials(initials) : Employee
        + create(firstName,lastName) : Employee
        + initialsExist(String initials) : boolean
        + generateRegularActivityId() : int
    }

}


ProjectFacade --> "1" ProjectRepository : projectRepository
EmployeeFacade --> "1" EmployeeRepository : employeeRepository

@enduml